# Kokoro-Engine

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md  README_EN.md  README_JA.md  README_KO.md  README_RU.md  README_ZH-TW.md  SPONSOR.md  flake.nix  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: bubble.json  default.json  pet.json
src-tauri/migrations/: 0001_initial_schema.sql  0002_add_fts5_and_triggers.sql  0003_add_session_summaries.sql  0004_add_emotion_snapshots.sql  0005_add_conversation_state_and_summaries.sql  0006_add_memory_observability.sql  0007_add_memory_retrieval_eval_columns.sql
src-tauri/nsis/: hooks.nsh
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
src-tauri/src/actions/: audit.rs  builtin.rs  executor.rs  mod.rs  permission.rs  registry.rs  tool_settings.rs
src-tauri/src/ai/: context.rs  curiosity.rs  emotion.rs  emotion_classifier.rs  emotion_events.rs  emotion_settings.rs  expression_driver.rs  heartbeat.rs  idle_behaviors.rs  initiative.rs  memory.rs  memory_embedding_model.rs  memory_event_ingress.rs  memory_extractor.rs  mod.rs  prompts.rs  router.rs  sentiment.rs  style_adapter.rs  tests.rs  tests_autonomous.rs  typing_sim.rs
src-tauri/src/chat/: tags.rs
src-tauri/src/commands/: actions.rs  auto_backup.rs  backup.rs  bot.rs  character.rs  characters.rs  chat.rs  context.rs  conversation.rs  database.rs  emotion_settings.rs  imagegen.rs  live2d.rs  live2d_protocol.rs  llm.rs  mcp.rs  memory.rs  mod.rs  mods.rs  pet.rs  singing.rs  stt.rs  system.rs  telegram.rs  tool_settings.rs  tts.rs  vision.rs
src-tauri/src/hooks/: handlers.rs  mod.rs  runtime.rs  tests.rs  types.rs
src-tauri/src/imagegen/: config.rs  google.rs  (+5 more)
(+243 files in other folders)
