[package]
name = "tauri-appkokoro-engine"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_appkokoro_engine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart"] }
eventsource-stream = "0.2"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
async-trait = "0.1"
bincode = "1.3"
chrono = "0.4.43"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
anyhow = "1.0.101"
fastembed = "5.9.0"
rquickjs = { version = "0.6", features = ["futures", "macro", "chrono", "loader"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
dirs-next = "2"
uuid = { version = "1.20.0", features = ["v4"] }
base64 = "0.22.1"
warp = "0.3"
filetime = "0.2"
xcap = "0.0.14"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
teloxide = { version = "0.13", features = ["macros"] }

[features]
stress = []

[dev-dependencies]
tempfile = "3"
proptest = "1"
wiremock = "0.6"
tokio-test = "0.4"
